[package]
name = "ironbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1.0.71"
base64 = "0.21.2"
clap = { version = "4.3.2", features = ["derive"] }
flate2 = "1.0.26"
home = "0.5.5"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
sha256 = "1.1.4"
